# CMake_Tutorials

Module_3/: CMakeLists.txt  main.cpp
Module_3/pr_libraries/include/utils/: Utils.h
Module_3/pr_libraries/src/: Utils.cpp
Module_4/: CMakeLists.txt  cmake_scripts.txt
Module_7/: CMakeLists.txt  main.cpp
Module_7/pr_libraries/: CMakeLists.txt
Module_7/pr_libraries/include/utils/: Utils.h
Module_7/pr_libraries/src/: Utils.cpp
Module_8/: CMakeLists.txt  main.cpp
Module_9/App_OpenCV/: CMakeLists.txt  Main.cpp
module_1/: CMakeLists.txt  Calculations.cpp  Calculations.h  Main.cpp  module_1
module_2/: CMakeLists.txt  Double  Main.cpp  Operations.cpp  Operations.h
